# Tarefa_1_AULA_10_02_2025

./: CMakeLists.txt  README.md  Tarefa_1_AULA_10_02_2025.c  wokwi.toml
lib/: ssd1306.c
